--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -7,11 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Google.Protobuf" Version="3.26.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="proto\" />
+    <PackageReference Include="NLog" Version="5.2.8" />
   </ItemGroup>
 
 </Project>
