--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.26.1" />
     <PackageReference Include="NLog" Version="5.2.8" />
   </ItemGroup>
 
