--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="NLog" Version="5.2.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Proto\" />
+  </ItemGroup>
+
 </Project>
