--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,10 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+[Ll]ibrary
+[Oo]bj
+[Ll]ogs
+[Tt]emp
+/MMORPG/UserSettings
+/MMORPG/Assets/TextMesh Pro
