--- a/Server/Common/Common.csproj
+++ b/Server/Common/Common.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="NLog" Version="5.2.8" />
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;$(SolutionDir)/../MMORPG/Assets/Plugins/$(TargetFileName)&quot;" />
+  </Target>
+
 </Project>
