--- a/Server/GameServer/GameServer.csproj
+++ b/Server/GameServer/GameServer.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="copy &quot;$(ProjectDir)\NLog.config&quot; &quot;$(TargetDir)\NLog.config&quot;" />
+  </Target>
+
 </Project>
