--- a/SERVER/Common/Common.csproj
+++ b/SERVER/Common/Common.csproj
@@ -6,8 +6,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Proto\Player - 复制\**" />
+    <EmbeddedResource Remove="Proto\Player - 复制\**" />
+    <None Remove="Proto\Player - 复制\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.26.1" />
     <PackageReference Include="NLog" Version="5.2.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Proto\Player\" />
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
