服务器支持登录、注册、加入游戏等服务

--- a/SERVER/GameServer/GameServer.csproj
+++ b/SERVER/GameServer/GameServer.csproj
@@ -8,6 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FreeSql" Version="3.2.820" />
+    <PackageReference Include="FreeSql.Provider.MySql" Version="3.2.820" />
+    <PackageReference Include="FreeSql.Repository" Version="3.2.820" />
     <PackageReference Include="Google.Protobuf" Version="3.26.1" />
   </ItemGroup>
 
