支持远程服务器调试的合并

--- a/SERVER/GameServer/GameServer.csproj
+++ b/SERVER/GameServer/GameServer.csproj
@@ -5,6 +5,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
+    <BaseOutputPath></BaseOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,8 +20,23 @@
     <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="copy &quot;$(ProjectDir)\NLog.config&quot; &quot;$(TargetDir)\NLog.config&quot;" />
+    <Exec Command="copy &quot;$(ProjectDir)\NLog.config&quot; &quot;$(TargetDir)\NLog.config&quot;&#xD;&#xA;$(SolutionDir)\DebugTools\syncc\syncc &quot;117.72.68.24&quot; $(TargetDir)" />
   </Target>
 
 </Project>
