修复了若干bug，支持了多玩家连接与位置同步

--- a/SERVER/GameServer/Properties/launchSettings.json
+++ b/SERVER/GameServer/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "GameServer": {
       "commandName": "Project",
-      "remoteDebugEnabled": true,
+      "remoteDebugEnabled": false,
       "remoteDebugMachine": "117.72.68.24:4026",
       "authenticationMode": "None"
     }
