Unity优化状态机

--- a/MMORPG/Packages/manifest.json
+++ b/MMORPG/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.browar.editor-toolbox": "https://github.com/arimger/Unity-Editor-Toolbox.git#upm",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.cinemachine": "2.9.7",
     "com.unity.collab-proxy": "2.3.1",
