--- a/MMORPG/.gitignore
+++ b/MMORPG/.gitignore
@@ -72,5 +72,8 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
+/[Aa]ssets/[Ss]treamingAssets/build_info
+/[Aa]ssets/[Ss]treamingAssets/build_info.meta
+
 /[Aa]ssets/[Pp]lugins/Common.dll
 /[Aa]ssets/[Ss]cenes/Space1Scene
