--- a/MMORPG/.gitignore
+++ b/MMORPG/.gitignore
@@ -69,11 +69,7 @@ crashlytics-build.properties
 /[Aa]ssets/[Aa]ddressable[Aa]ssets[Dd]ata/*/*.bin*
 
 # Temporary auto-generated Android Assets
-/[Aa]ssets/[Ss]treamingAssets/aa.meta
-/[Aa]ssets/[Ss]treamingAssets/aa/*
-
-/[Aa]ssets/[Ss]treamingAssets/build_info
-/[Aa]ssets/[Ss]treamingAssets/build_info.meta
+/[Aa]ssets/[Ss]treamingAssets
 
 /[Aa]ssets/[Pp]lugins/Common.dll
 /[Aa]ssets/[Ss]cenes/Space1Scene
