初步完成新Aoi的移动测试

--- a/SERVER/GameServer/GameServer.csproj
+++ b/SERVER/GameServer/GameServer.csproj
@@ -22,8 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AOI2\AOI2.csproj" />
     <ProjectReference Include="..\Common\Common.csproj" />
-    <ProjectReference Include="..\ThirdParty\AOI\AOI.csproj" />
   </ItemGroup>
 
   <ItemGroup>
