调整战斗系统，消除部分警告

--- a/SERVER/Common/Common.csproj
+++ b/SERVER/Common/Common.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Proto\Skill.proto" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.26.1" />
   </ItemGroup>
 
