战斗系统设计

--- a/SERVER/Common/Common.csproj
+++ b/SERVER/Common/Common.csproj
@@ -6,8 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Proto\Monster\**" />
     <Compile Remove="Proto\Player - 复制\**" />
+    <EmbeddedResource Remove="Proto\Monster\**" />
     <EmbeddedResource Remove="Proto\Player - 复制\**" />
+    <None Remove="Proto\Monster\**" />
     <None Remove="Proto\Player - 复制\**" />
   </ItemGroup>
 
