完成背包基本定义

--- a/SERVER/Common/Common.csproj
+++ b/SERVER/Common/Common.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <Folder Include="Data\cs\" />
     <Folder Include="Data\json\" />
+    <Folder Include="Inventory\" />
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
