--- a/MMORPG/.gitignore
+++ b/MMORPG/.gitignore
@@ -11,6 +11,12 @@
 /[Uu]ser[Ss]ettings/
 /AssetBundles/
 
+/Assets/Resources/Third-Party/Blink
+/Assets/Plugins/DamageNumbersPro/Demo
+/Assets/Plugins/DamageNumbersPro/Demo C#
+/Assets/Plugins/DamageNumbersPro/Demo C#.meta
+/Assets/Plugins/DamageNumbersPro/Demo.meta
+
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
 /[Mm]emoryCaptures/
